--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,4 +9,20 @@
 	<string name="username">username</string>
 	<string name="empty"></string>
 	<string name="repassword">Confirm Password</string>
+	
+
+    <string name="title_section1">Section 1</string>
+    <string name="title_section2">Section 2</string>
+    <string name="title_section3">Section 3</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="action_example">Example action</string>
+
+    <string name="action_settings">Settings</string>
+
+
+    <color name="card_background">#ffffff</color>
+    <color name="card_shadow">#10000000</color>
 </resources>
